<resources>
    <string name="app_name">SIMple</string>
    <string name="title_home">Inicio</string>
    <string name="title_balance">Balances</string>
    <string name="title_buy">Compras</string>
    <string name="title_llamadas">Llamadas</string>
    <string name="title_nauta">Nauta</string>
    <string name="title_perfil">Mi Perfil</string>
    <string name="title_servicios">Servicios SMS</string>
    <string name="title_entumovil">entuMóvil</string>
    <string name="title_telepuntos">Telepuntos</string>
    <string name="title_settings">Configuración</string>
    <string name="title_privacidad">Políticas de Privacidad</string>
    <string name="title_about">Acerca de</string>
    <string name="title_invite">Invitar amigo</string>
    <string name="title_login">Iniciar Sesión</string>
    <string name="title_portal_user">Portal Usuario</string>
    <string name="title_bug_report">Error</string>
    <string name="message_bug_report">¡No eres tú, soy yo!\n\nAl parecer ha ocurrido un error que ha provocado el cierre de la aplicación, sería de mucha ayuda si nos envías el registro de errores, así poder dar una solución.</string>
    <string name="balance_tarifa_activa">Tarifa activa</string>
    <string name="balance_tarifa_desactiva">Tarifa desactivada</string>
    <string name="balance_title_saldo">Usted tiene:</string>
    <string name="preference_sim_summary">Seleccione la SIM por la cual desea que la aplicación se ejecute (No compatible con Balances)</string>
    <string name="preference_sim_title">SIM</string>
    <string name="preference_category_sim">SIM</string>
    <string name="preference_category_general">General</string>
    <string name="preference_category_tema">Tema</string>
    <string name="array_tema_default">Automático</string>
    <string name="array_tema_light">Claro</string>
    <string name="array_tema_dark">Oscuro</string>
    <string name="vence_saldo">Expira:</string>
    <string name="cuentas_categ_internet">Internet</string>
    <string name="vence_internet">Vence en:</string>
    <string name="cuentas_categ_bolsas_bonos">Bolsas y Bonos</string>
    <string name="vence_dias">0 días</string>
    <string name="vence_horas">0 horas</string>
    <string name="dias">días</string>
    <string name="horas">horas</string>
    <string name="tarifa_activa">Tarifa activa</string>
    <string name="tarifa_desactiva">Tarifa desactivada</string>
    <string name="tarifa_sin_obtener">Tarifa sin obtener</string>
    <string name="message_update">Desliza para actualizar</string>
    <string name="progress_message_saldo">Consultando saldo, espere...</string>
    <string name="progress_message_datos">Consultando datos, espere...</string>
    <string name="progress_message_mensajes">Consultando mensajes, espere...</string>
    <string name="progress_message_minutos">Consultando minutos, espere...</string>
    <string name="progress_message_bonos">Consultando bonos, espere...</string>
    <string name="error_message_saldo">¡Error al consultar su saldo, inténtelo de nuevo!</string>
    <string name="error_message_datos">¡Error al consultar sus datos, inténtelo de nuevo!</string>
    <string name="error_message_mensajes">¡Error al consultar sus mensajes, inténtelo de nuevo!</string>
    <string name="error_message_minutos">¡Error al consultar sus minutos, inténtelo de nuevo!</string>
    <string name="error_message_bonos">¡Error al consultar sus bonos, inténtelo de nuevo!</string>
    <string name="positive_buttom">Aceptar</string>
    <string name="title_tab_plan">Planes</string>
    <string name="title_tab_paquete">Paquetes</string>
    <string name="title_tab_amigo">Plan Amigo</string>
    <string name="title_categoria_combos">Combinados</string>
    <string name="title_categoria_lte">LTE</string>
    <string name="title_categoria_bolsas">Bolsas</string>
    <string name="title_plan_basico">1.4 GB</string>
    <string name="subtitle_plan_basico">Plan Básico</string>
    <string name="title_plan_medio">3.5 GB</string>
    <string name="subtitle_plan_medio">Plan Medio</string>
    <string name="title_plan_extra">8 GB</string>
    <string name="subtitle_plan_extra">Plan Extra</string>
    <string name="message_tarifa">Cuando habilitas la tarifa por consumo, al navegar con datos móviles, se descuenta directamente del saldo principal. Es una opción más costosa por lo que te recomendamos comprar un Paquete o un Plan Combinado.</string>
    <string name="subtitle_lte">solo LTE</string>
    <string name="title_lte_a">1 GB</string>
    <string name="title_lte_b">2.5 GB</string>
    <string name="title_lte_c">16 GB</string>
    <string name="subtitle_mensajeria">Mensajería</string>
    <string name="subtitle_diaria">Diaria</string>
    <string name="title_mensajeria">600 MB</string>
    <string name="title_diaria">200 MB</string>
    <string name="buttom_cancel">Cancelar</string>
    <string name="buttom_buy">Comprar</string>
    <string name="buttom_positive">Aceptar</string>
    <string name="paquetes_nacional">300 MB solo para la red nacional</string>
    <string name="plan_basico_precio">110 CUP</string>
    <string name="plan_basico_paquete">600 MB para todas las redes</string>
    <string name="plan_basico_lte">800 MB solo para la red 4G/LTE</string>
    <string name="plan_basico_voz">15 minutos nacionales</string>
    <string name="plan_basico_sms">20 mensajes nacionales</string>
    <string name="plan_basico_vence">30 días a partir de su primer uso</string>
    <string name="plan_medio_precio">250 CUP</string>
    <string name="plan_medio_paquete">1.5 GB para todas las redes</string>
    <string name="plan_medio_lte">2 GB solo para la red 4G/LTE</string>
    <string name="plan_medio_nacional">300 MB solo para la red nacional</string>
    <string name="plan_medio_voz">35 minutos nacionales</string>
    <string name="plan_medio_sms">40 mensajes nacionales</string>
    <string name="plan_medio_vence">30 días a partir de su primer uso</string>
    <string name="plan_extra_precio">500 CUP</string>
    <string name="plan_extra_paquete">3.5 GB para todas las redes</string>
    <string name="plan_extra_lte">4.5 GB solo para la red 4G/LTE</string>
    <string name="plan_extra_nacional">300 MB solo para la red nacional</string>
    <string name="plan_extra_voz">75 minutos nacionales</string>
    <string name="plan_extra_sms">80 mensajes nacionales</string>
    <string name="plan_extra_vence">30 días a partir de su primer uso</string>
    <string name="paquete_a_precio">100 CUP</string>
    <string name="paquete_a_lte">1 GB solo para la red 4G/LTE</string>
    <string name="paquete_a_nacional">300 MB solo para la red nacional</string>
    <string name="paquete_a_vence">30 días a partir de su primer uso</string>
    <string name="paquete_b_precio">200 CUP</string>
    <string name="paquete_b_lte">2.5 GB solo para la red 4G/LTE</string>
    <string name="paquete_b_nacional">300 MB solo para la red nacional</string>
    <string name="paquete_b_vence">30 días a partir de su primer uso</string>
    <string name="paquete_c_precio">950 CUP</string>
    <string name="paquete_c_paquete">4.5 GB para todas las redes</string>
    <string name="paquete_c_lte">12 GB solo para la red 4G/LTE</string>
    <string name="paquete_c_nacional">300 MB solo para la red nacional</string>
    <string name="paquete_c_vence">30 días a partir de su primer uso</string>
    <string name="mensajeria_precio">25 CUP</string>
    <string name="mensajeria_paquete">600 MB nacionales para toDus y correo nauta</string>
    <string name="mensajeria_vence">30 días a partir de su primer uso</string>
    <string name="diaria_precio">25 CUP</string>
    <string name="diaria_paquete">200 MB solo para la red 4G/LTE</string>
    <string name="diaria_vence">24 horas a partir de su primer uso</string>
    <string name="preference_title_tema">Tema</string>
    <string name="message_permissions_denied">¡Debe conceder el permiso de llamadas!</string>
    <string name="preference_summary_floating">Mostrar una burbuja flotante con la velocidad de subida y descarga actual</string>
    <string name="preference_title_floating">Velocidad de la red</string>
    <string name="preference_summary_autocomplete">Rellenar los campos de contraseña de transferencia y usuario nauta insertados en Mi Perfil</string>
    <string name="preference_title_autocomplete">Autocompletado</string>
    <string name="preference_summary_language">Seleccione su idioma preferido</string>
    <string name="preference_title_language">Idioma</string>
    <string name="preference_summary_notification">Mostrar notificación con el balance de sus datos</string>
    <string name="preference_title_notification">Notificación</string>
    <string name="title_array_language_es">Español</string>
    <string name="title_array_language_en">Inglés</string>
    <string name="buttom_access_portal_nauta">Acceder</string>
    <string name="buttom_access_login">Conectarse</string>
    <string name="hint_captcha">Captcha</string>
    <string name="hint_user_password">Contraseña</string>
    <string name="hint_usuario">Usuario</string>
    <string name="portal_nauta_title">Información</string>
    <string name="portal_nauta_saldo">Saldo de la cuenta</string>
    <string name="portal_nauta_tipo">Tipo de cuenta</string>
    <string name="portal_nauta_bloqueo">Bloqueo de la cuenta</string>
    <string name="portal_nauta_delete">Eliminación de la cuenta</string>
    <string name="portal_nauta_recarga">Recargar cuenta</string>
    <string name="portal_nauta_transferir">Enviar saldo a otra cuenta</string>
    <string name="hint_recarga_cuenta">Código de recarga</string>
    <string name="hint_monto_cuenta">Importe</string>
    <string name="hint_cuenta_destino">Destinatario</string>
    <string name="buttom_recargar">Recargar</string>
    <string name="buttom_transferir">Transferir</string>
    <string name="message_scanner_qr_code">Enfoque el QR para recargar</string>
    <string name="portal_nauta_password">Cambiar contraseña</string>
    <string name="hint_nueva_password">Nueva contraseña</string>
    <string name="hint_repetir_password">Repetir contraseña</string>
    <string name="buttom_cambiar_password">Cambiar</string>
    <string name="categoria_voz">Voz</string>
    <string name="categoria_sms">SMS</string>
    <string name="title_minutos">Minutos</string>
    <string name="title_mensajes">Mensajes</string>
    <string name="title_5_min">5 MIN</string>
    <string name="title_10_min">10 MIN</string>
    <string name="title_15_min">15 MIN</string>
    <string name="title_25_min">25 MIN</string>
    <string name="title_40_min">40 MIN</string>
    <string name="subtitle_5_min">35.50 CUP</string>
    <string name="subtitle_10_min">72.50 CUP</string>
    <string name="subtitle_15_min">105 CUP</string>
    <string name="subtitle_25_min">162.50 CUP</string>
    <string name="subtitle_40_min">250 CUP</string>
    <string name="title_20_sms">20 SMS</string>
    <string name="title_50_sms">50 SMS</string>
    <string name="title_90_sms">90 SMS</string>
    <string name="hint_amigo_numero">Número de teléfono</string>
    <string name="title_perfil_numero">Número</string>
    <string name="title_perfil_password">Contraseña</string>
    <string name="title_perfil_email">Cuenta Nauta</string>
    <string name="subtitle_perfil_numero">Inserte su número de teléfono</string>
    <string name="subtitle_perfil_password">Contraseña de transferencia de saldo</string>
    <string name="subtitle_perfil_email">Guarde su cuenta nauta para usarla después</string>
    <string name="buttom_share_qr_code">Compartir</string>
    <string name="description_code_qr">Tu código QR es privado. Si lo compartes con alguien, esa persona podrá escanearlo con la cámara de SIMple para transferirte saldo.</string>
    <string name="title_qr">Mi QR</string>
    <string name="warning_login">* Esta opción está en proceso de desarrollo, puede no funcionar totalmente o parcialmente</string>
</resources>