<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?textAppearanceHeadlineMedium"
        android:id="@+id/textTitle"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/text_rounded_background"
        android:textAppearance="?textAppearanceBodySmall"
        android:padding="6dp"
        android:id="@+id/textPrecio"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?textAppearanceBodyMedium"
        android:padding="5dp"
        android:id="@+id/textMessage"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeWidth="0dp"
        app:boxCornerRadiusTopEnd="30dp"
        android:hint="@string/hint_amigo_numero"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxStrokeWidthFocused="0dp"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        app:errorEnabled="true"
        android:id="@+id/inputAmigo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/editTextAmigo"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="4dp"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:id="@+id/buttomCancel"
            android:text="@string/buttom_cancel"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="4dp"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:id="@+id/buttomBuy"
            android:text="@string/buttom_positive"/>

    </LinearLayout>

</LinearLayout>